--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <title>Instagram</title>
-</head>
-<body>
-  Instagram
+  <head>
+    <title>Instagram</title>
+    <link rel="stylesheet" href="../starter-code/css/main.css" />
+  </head>
+  <body>
+    <section id="content">
+      <div>
+        <img id="phones" src="../starter-code/images/phones.png" alt="phones" />
+      </div>
 
-  Capture and Share the World's Moments
+      <div>
+        <div id="logo-header">
+          <img
+            id="logo"
+            src="../starter-code/images/brand.png"
+            alt="Logo Instagram"
+          />
+          <div class="login-button">
+            <p>Log in</p>
+            <img class="home-icon" src="images/home.png" alt="" />
+          </div>
+        </div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+        <div id="text">
+          <h1>Capture and Share the World's Moments</h1>
+          <p>
+            Instagram is a <strong>fast, beautiful</strong> and
+            <strong>fun</strong> way to share your life with friends and family.
+          </p>
+          <p>
+            Take a picture or video, choose a filter to transform its look and
+            feel, then post to Instagram it's that easy. You can even share to
+            Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+          </p>
+          <p>
+            Oh yeah, did we mention it's free?
+          </p>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+          <div id="badges">
+            <img
+              id="iphone"
+              src="../starter-code/images/badge-iphone.png"
+              alt="badge-iphone"
+            />
+            <img
+              id="android"
+              src="../starter-code/images/badge-android.png"
+              alt="badge-android"
+            />
+          </div>
+        </div>
+      </div>
+    </section>
 
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
-</body>
+    <div id="footer">
+      <ul>
+        <li>About Us</li>
+        <li>Support</li>
+        <li>Blog</li>
+        <li>Press</li>
+        <li>API</li>
+        <li>Jobs</li>
+        <li>Privacy</li>
+        <li>Terms</li>
+        <li>2014 Instagram</li>
+      </ul>
+    </div>
+  </body>
 </html>
